--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "romap"
 version = "0.1.0"
 edition = "2021"
+readme = "Readme.md"
 keywords = ["traits","data-structures","container","map"]
 categories = ["rust-patterns","no-std::no-alloc","algorithms"]
 authors = ["m-mueller678"]
