--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "romap"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 readme = "Readme.md"
 keywords = ["traits","data-structures","container","map"]
@@ -16,3 +16,4 @@ test_utils = ["std"]
 default = ["std"]
 
 [dependencies]
+either = { version = "1.13.0",default-features = false }
